# demo-secure-python-proj

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: security.yaml
